# dynamic-micro-frontends

./: .gitignore  README.md  docker-compose.yml
My-FrameApp/: .gitignore  Dockerfile  My-FrameApp.sln
My-FrameApp/My-FrameApp/: My-FrameApp.csproj  Program.cs  _Imports.razor
My-FrameApp/My-FrameApp/Layout/: NavMenu.razor
My-FrameApp/My-FrameApp/Pages/: Feature.razor
My-FrameApp/My-FrameApp/Properties/: launchSettings.json
My-FrameApp/My-FrameApp/wwwroot/: featureLoader.js  index.html  manifest.webmanifest
auth-backend/: Cargo.toml  Dockerfile  Dockerfile_old  diesel.toml
auth-backend/migrations/2024-07-20-182325_create_users/: up.sql
auth-backend/src/: auth.rs  db.rs  errors.rs  main.rs  schema.rs
auth-backend/src/users/: model.rs
krakend/: krakend.json
my-calendar/: Dockerfile  README.md  bun.lockb  nginx.conf  package.json  vite.config.ts
my-calendar/src/: main.js
my-home-page/: Dockerfile  package-lock.json  package.json  vite.config.ts
my-home-page/src/: index.tsx
my-nested-component/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
my-nested-component/src/: index.html  main.ts
my-nested-component/src/app/: app.component.html  (+2 more)
my-todo-list/: Dockerfile  package-lock.json  package.json  vite.config.ts
my-todo-list/dist-js/: my-todo-list.es.js
my-todo-list/src/: App.svelte  main.wc.ts
todo-list-backend/: Dockerfile  go.mod  go.sum  main.go
todo-list-backend/controller/: todo_list_controller.go
todo-list-backend/helper/: jwt_authentication.go
todo-list-backend/middleware/: jwt_middleware.go
