[package]
name = "auth-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-rt = "2.10.0"
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
lazy_static = "1.4"
listenfd = "1.0.1"
password-hash = "0.5.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }